--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Barebones News</title> 
   </head> 
   <body> 
-    <p>This is news at its simplest</p> 
+    <p>News at its barest</p> 
   </body> 
 </html>
